# wf-csd-deco

./: LICENSE  meson.build
proto/: wf-decorator.xml
wf-gtk4-client/: main.cpp  meson.build  protocol.cpp  protocol.hpp
wf-plugin/: gtkdecor.cpp  meson.build
